--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
 		"sdl.h": "c",
 		"pthread.h": "c",
 		"wait.h": "c",
-		"types.h": "c"
+		"types.h": "c",
+		"semaphore.h": "c",
+		"fcntl.h": "c",
+		"unistd.h": "c"
 	}
 }
